--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,3 +41,11 @@
     "vendor/font-awesome/solid",
     "vendor/font-awesome/brands"
 ;
+
+/* === Custom overrides === */
+.author__avatar img {
+  border-radius: 0 !important;  /* make it square */
+  width: 150px;
+  height: auto;
+  box-shadow: none;
+}
